resources/styles.css
* {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: x-large;
    margin: 0;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    /* Apply a consistent font family and size across all elements, and remove default margin */
}

body {
    background-color: white;
    /* Set the background color of the body to white */
}

textarea {
    resize: none;
    /* Prevent textarea from being resized */
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #333;
    position: fixed;
    width: 100%;
    /* Style the navigation bar */
}

li {
    float: left;
    /* Float list items to the left */
}

li a {
    display: block;
    color: white;
    text-align: center;
    padding: 16px 12px;
    text-decoration: none;
    /* Style the links inside the list items */
}

li a:hover {
    background-color: #535353;
    /* Change background color on hover for links */
}

.active {
    background-color: #0452aa;
    /* Style for the active link */
}

.active:hover {
    background-color: #3571b6;
    /* Change background color on hover for the active link */
}

#Record2 {
    display: flex;
    width: 100%;
    justify-content: center;
}

#tcpdumpForm1,
#tcpdumpForm2 {
    width: 98%;
    display: flex;
    justify-content: center;
    /* Style the tcpdump form */
}

.deviceTable {
    width: 98%;
    border: solid 1px #ccc;
    border-radius: 7px;
    padding: 5px;
    padding-bottom: 0px;
    margin-right: 10px;

}



#tcpdumpForm table td:nth-child(2) {
    width: 310px;
    border: solid 1px #ccc;
    border-radius: 5px;
    padding-right: 0px;
    /* Style the second column of table cells */
}

#tcpdumpForm table td:nth-child(2) input {
    width: 99%;
    border: none;
    padding: 4px;
    /* Style input elements inside the second column */
}

#tcpdumpForm table td:nth-child(2) select {
    width: 99%;
    border: none;
    padding: 4px;
    /* Style select elements inside the second column */
}

#tcpdumpForm table td:nth-child(3){}

select option {
    padding: 0px !important;
    background-color: white !important;
    border:none !important;
    /* Style options inside select elements */
}

button {
    border: none;
    background-color: #cecece;
    padding: 4px;
    border-radius: 5px;
    cursor: pointer;
    /* Style buttons */
}

button:hover {
    background-color: #e1e1e1;
    /* Change background color on hover for buttons */
}

select {
    background-color: none;
    border: none;
}

#chooseParams,
#historyPageContent,
#helpPageContent,
#filterPageContent {
    width: 99%;
    padding: 4px;
    padding-top: 65px;
    /* Style for specific page content sections */
}


#outPutTextArea,
#outPutTextArea1,
#outPutTextArea2 {
    width: 97%;
    height: 140px;
    /* Style for the output text area */
}


#tcpdumpButton,
#tcpdumpButton1,
#tcpdumpButton2,
#btn2Record {
    width: 100%;
    border: none;
    padding: 4px;
    border: solid 1px #ccc;
    border-radius: 5px;
    /* Style for the tcpdump button */
}


#tcpdumpButton:hover,
#tcpdumpButton1:hover,
#tcpdumpButton2:hover {
    background-color: #e1e1e1;
    /* Change background color on hover for the tcpdump button */
}

#returnMainPageBtn {
    width: 100%;
    border: none;
    padding: 4px;
    border: solid 1px #ccc;
    border-radius: 5px;
    /* Style for the return main page button */
}

#returnMainPageBtn:hover {
    background-color: #e1e1e1;
    /* Change background color on hover for the return main page button */
}

#ipNavBar {
    color: white;
    font-size: smaller;
    /* Style for the IP navigation bar */
}

#historyTable {

    width: 98%;
    border-collapse: collapse;
    text-align: left;
    margin: 3px;
    /* Style for the history table */

    td {
        border: solid 1px #ccc;
        padding: 5px;
        /* Style table cells */
    }

    button {
        padding: 3px 8px;
        /* Style buttons inside table cells */
    }

    td:nth-child(3) {
        text-align: center;
        /* Center-align text in the third column */
    }

    td:nth-child(4) {
        text-align: center;
        /* Center-align text in the fourth column */
    }
    td:nth-child(5) {
        text-align: center;
        /* Center-align text in the fourth column */
    }
}

#moreOption {
    width: 98%;
    padding: 4px;

    /* Style for the more options section */
    button {
        padding: 8px 12px;
        /* Style buttons inside the more options section */
    }

    div {
        margin-left: 3px;
        margin-right: 3px;
        text-align: center;
        display: grid;
        grid-template-columns: repeat(5, 1fr);
        grid-template-rows: repeat(2, auto);
        gap: 5px;
    }

    table {
        border-collapse: collapse;
        text-align: left;
        margin: 3px;
        /* Style for the history table */

        td {
            border: solid 1px #ccc;
            padding: 5px;
            /* Style table cells */
        }

        /* Style for the table inside the more options section */
    }

}

